# Lightweight-MapReduce

./: .gitignore  CMakeLists.txt  LICENSE  README.md  common.h  main.cpp  netcomm.cpp  netcomm.h
src/: CMakeLists.txt  common.h  hash.cpp  hash.h  mapinput.cpp  mapinput.h  mapper.cpp  mapper.h  mapreduce.cpp  mapreduce.h  netcomm.cpp  netcomm.h  netpacket.h  reduceinput.cpp  reduceinput.h  reducer.cpp  reducer.h  register.h  spec.h
src/ml/: kmeans.cpp  kmeans.h  linear_regression.cpp  linear_regression.h  logistic_regression.cpp  logistic_regression.h  naivebayes.cpp  naivebayes.h
tests/: CMakeLists.txt  mapinput_test.cpp  mapper_test.cpp  mapreduce_hello_test.cpp  mapreduce_test.cpp  naivebayes_test.cpp  netcomm_test.cpp  reducer_test.cpp  register_test.cpp
tests/ml/: kmeans_test.cpp  linearregression_test.cpp  logisticregression_test.cpp  naivebayes_test.cpp
